📝 docs: complete user chat

--- a/Different_Chat_interfaces.ipynb
+++ b/Different_Chat_interfaces.ipynb
@@ -1563,12 +1563,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 353
+          "height": 1000
         },
         "id": "aYKOwg7KWxHP",
         "outputId": "e28fb139-696c-456d-cdfb-f6a423e9945f"
       },
-      "execution_count": null,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1623,11 +1623,80 @@
           "metadata": {}
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Your turn to respond:\n"
+            "Your turn to respond:\n",
+            "Please enter your response: Bundles nanunua za like 3k. But I pay for the combined voice bundled with net. Matatutu nalipa around 1k per wiki\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">assistant: Thank you for providing the additional details of your monthly expenses, Omar Karuga Alhad. Based on the information you provided, your monthly expenses include:<br><br>1. Rent: 35,000 KES<br>2. Food (shared with family): 5,000 KES<br>3. Internet and voice bundle: 3,000 KES<br>4. Transportation: 4,000 KES (1,000 KES per week)<br><br>Now, let's move on to your remaining expenses. Please provide me with an estimate of your monthly expenses for utilities (electricity, water), entertainment, and any other regular expenses you have.</font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Your turn to respond:\n",
+            "Please enter your response: To say the truth\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">assistant: I understand that discussing personal finances can sometimes be uncomfortable. However, in order to provide you with accurate and personalized financial advice, it is important to have a clear understanding of your monthly expenses. If you feel comfortable, please provide an estimate of your monthly expenses for utilities (electricity, water), entertainment, and any other regular expenses you have. This will help me create a comprehensive financial picture and provide you with the best possible advice.</font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Your turn to respond:\n",
+            "Please enter your response: Okay, I eat out in crazy grill almost kila wikendi, bana. Stima pia imepanda jooo. Like almost double from last year. I now pay about 4k every month. Mafuta is like at 210 per litre. Its crazy, and I still pay for netflix about 2.3 dollars a month na Usd iko 147 saa hii\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'role': 'assistant',\n",
+              "  'content': \"Hello! I am MaishaMoney AI, your personal financial assistant. I am here to help you improve your financial health. To get started, I need to gather some information about your current financial situation. Let's begin with your monthly income. Could you please provide me with your total monthly income after taxes?\"},\n",
+              " {'role': 'user',\n",
+              "  'content': 'Hey my name is Omar Karuga Alhad, I am a software engineer at alpha apps in Nairobi. I make about 75,000 kes kila mwezi'},\n",
+              " {'role': 'assistant',\n",
+              "  'content': \"Thank you for providing your information, Omar Karuga Alhad. As a software engineer at Alpha Apps in Nairobi, you have a monthly income of 75,000 KES. Now, let's move on to your monthly expenses. Can you please provide me with an estimate of your monthly expenses, including rent/mortgage, utilities, groceries, transportation, and any other regular expenses you have?\"},\n",
+              " {'role': 'user',\n",
+              "  'content': 'nalipa rent of about 35,000 in Kileleshwa. I share my house with my other family members so we contribute to food pamoja. I contribute about 5k every month for that.'},\n",
+              " {'role': 'assistant',\n",
+              "  'content': \"Thank you for providing the details of your monthly expenses, Omar Karuga Alhad. Based on the information you provided, your monthly expenses include:\\n\\n1. Rent: 35,000 KES\\n2. Food (shared with family): 5,000 KES\\n\\nNow, let's move on to your other expenses. Please provide me with an estimate of your monthly expenses for utilities (electricity, water, internet), transportation, entertainment, and any other regular expenses you have.\"},\n",
+              " {'role': 'user',\n",
+              "  'content': 'Bundles nanunua za like 3k. But I pay for the combined voice bundled with net. Matatutu nalipa around 1k per wiki'},\n",
+              " {'role': 'assistant',\n",
+              "  'content': \"Thank you for providing the additional details of your monthly expenses, Omar Karuga Alhad. Based on the information you provided, your monthly expenses include:\\n\\n1. Rent: 35,000 KES\\n2. Food (shared with family): 5,000 KES\\n3. Internet and voice bundle: 3,000 KES\\n4. Transportation: 4,000 KES (1,000 KES per week)\\n\\nNow, let's move on to your remaining expenses. Please provide me with an estimate of your monthly expenses for utilities (electricity, water), entertainment, and any other regular expenses you have.\"},\n",
+              " {'role': 'user', 'content': 'To say the truth'},\n",
+              " {'role': 'assistant',\n",
+              "  'content': 'I understand that discussing personal finances can sometimes be uncomfortable. However, in order to provide you with accurate and personalized financial advice, it is important to have a clear understanding of your monthly expenses. If you feel comfortable, please provide an estimate of your monthly expenses for utilities (electricity, water), entertainment, and any other regular expenses you have. This will help me create a comprehensive financial picture and provide you with the best possible advice.'},\n",
+              " {'role': 'user',\n",
+              "  'content': 'Okay, I eat out in crazy grill almost kila wikendi, bana. Stima pia imepanda jooo. Like almost double from last year. I now pay about 4k every month. Mafuta is like at 210 per litre. Its crazy, and I still pay for netflix about 2.3 dollars a month na Usd iko 147 saa hii'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 164
         }
       ]
     },
